# csci3360-group-proj

./: .gitignore  tailwind.config.js
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/: api.py  deps.py  schema.py  settings.py
backend/src/application/: agent.py  external_usecase.py  jobs.py  openai.py  openai_utils.py  usecase.py  usecase_v2.py
backend/src/database/: models.py
backend/src/router/: auth.py  chat.py  chatroom.py  courses.py  jobs.py  subtask.py  task.py
backend/tests/: test_agent.py  test_canvas_api.py  test_openai_utils.py  test_usecases.py
frontend/: .eslintrc.json  next.config.mjs  package-lock.json  package.json
frontend/db/migrations/: create_feedback_table.sql
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx  supabase.server.ts  supabase.ts
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/app/(newmain)/: layout.tsx  page.tsx
frontend/src/app/(newmain)/chat/: page.tsx
frontend/src/app/(newmain)/coursework/: page.tsx
frontend/src/app/(newmain)/dashboard/: page.tsx
frontend/src/app/(newmain)/settings/: layout.tsx  page.tsx
frontend/src/app/(onboard)/onboard/: page.tsx
frontend/src/app/504/: page.tsx
frontend/src/app/_api/: auth.ts  chat.ts  courses.ts
frontend/src/app/auth/callback/: route.ts
frontend/src/app/onboard/: page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/components/: app-sidebar-v2.tsx  feedback-modal.tsx  nav-user.tsx
frontend/src/components/504/: 504-error.tsx
frontend/src/components/chatroom/: assignment-quiz-card.tsx  calendar-event-card.tsx  chat-area.tsx  chat-bubble.tsx  chat-layout.tsx  chat-scheduler.tsx  chat-sidebar.tsx  course-list-card.tsx  material-documents-card.tsx  message-starter.tsx  onboard.tsx  task-card.tsx  task-confirmation-card.tsx
frontend/src/components/chatroom/forms/: task-estimation-form.tsx
frontend/src/components/coursework/: course-details.tsx  course-list.tsx
frontend/src/components/dashboard/: main-widgets.tsx
frontend/src/components/settings/: GoogleCalendarSettings.tsx
frontend/src/components/signin/: signin-form.tsx
frontend/src/components/ui/: app-sidebar.tsx  course-card.tsx  jobs-notification.tsx  profile-form.tsx  sync-button.tsx  task-chart.tsx  task-stacked-bar-chart.tsx  upload-dropzone.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useGoogleAuth.ts
frontend/src/lib/: database.types.ts  utils.ts
frontend/src/lib/supabase/: client.ts  server.ts
(+4 files in other folders)
