[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ahnsv <ahnsv@bc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.149.0"
fastapi = "^0.115.0"
httpx = "^0.27.2"
pydantic-settings = "^2.5.2"
uvicorn = "^0.32.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"


[tool.ruff.lint]
extend-select = ["I"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
