[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ahnsv <ahnsv@bc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.149.0"
fastapi = "^0.115.0"
httpx = "^0.27.2"
pydantic-settings = "^2.5.2"
uvicorn = "^0.32.0"
openai = "^1.52.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
supabase-auth = "^2.9.3"
canvasapi = "^3.3.0"
langchain-core = "^0.3.19"
langchain-openai = "^0.2.9"
langgraph = "^0.2.52"
pgvector = "^0.3.6"
nltk = "^3.9.1"
pypdf2 = "^3.0.1"
supabase = "^2.10.0"
langchain-community = "<0.3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
aiosqlite = "^0.20.0"
pyjwt = "^2.10.0"


[tool.ruff.lint]
extend-select = ["I"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
